feat(gp): swagger examples:DTO and Controller